Patch rell-dokka-plugin in local-chr.sh and fix docs README